rook-ceph/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - rook.architectsmp.com
  rules:
    - host: rook.architectsmp.com
      http:
        paths:
          - path: /
            backend:
              serviceName: rook-ceph-mgr-dashboard
              servicePort: http-dashboard
